# opencode-orchestrator

./: .env.example  .gitignore  README.md  pyproject.toml
cmd/agentcore_mock/: main.py
cmd/api/: main.py
cmd/bedrock_demo/: __init__.py  main.py
config/profiles/: dev-openrouter-free.yaml
deploy/compose/: docker-compose.dev-agentcore-http.yml  docker-compose.dev-bedrock-demo.yml  docker-compose.dev-openrouter-free.yml
docs/: AWS_ACTIVATION_RUNBOOK.md
docs/adr/: 001-orchestrator-service-first.md  002-collaborative-agent-orchestration.md  003-hybrid-retrieval-and-provider-abstraction.md  004-evaluation-and-human-review-first.md  005-bedrock-agentcore-for-ops-governance.md
docs/api/: README.md
docs/architecture/: README.md  agent-workflows.md  bedrock-agentcore-ops-governance.md  bedrock-flows-knowledge-bases.md  c4-components-orchestrator.md  c4-container.md  c4-context.md  profile-langgraph-openrouter-free.md
docs/modules/: README.md
internal/modules/orchestration/: graph.py  state.py
internal/modules/support/: actions.py
internal/platform/: config.py
internal/platform/agentcore/: boundary.py  external_stub.py  gateway_mcp_client.py  http_client.py
internal/platform/bedrock/: flows.py  knowledge_bases.py  runtime.py
internal/platform/embeddings/: toy.py
internal/platform/events/: operator_tasks.py
internal/platform/inference/: __init__.py  router.py
internal/platform/openrouter/: client.py
internal/platform/qdrant/: adapter.py
internal/shared/: dependencies.py
tests/http/: test_assist_api.py
tests/integration/: test_assist_graph.py
(+2 files in other folders)
