[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencode-orchestrator"
version = "0.1.0"
description = "Runnable scaffold for a LangGraph + OpenRouter + Qdrant e-commerce AI orchestrator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.42.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "PyYAML>=6.0.2",
  "langgraph>=1.0.0",
  "psycopg[binary]>=3.2.0",
  "qdrant-client>=1.11.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0"
]

[tool.setuptools]
include-package-data = true
packages = [
  "cmd",
  "cmd.api",
  "cmd.agentcore_mock",
  "cmd.bedrock_demo",
  "internal",
  "internal.modules",
  "internal.modules.orchestration",
  "internal.modules.support",
  "internal.platform",
  "internal.platform.agentcore",
  "internal.platform.bedrock",
  "internal.platform.embeddings",
  "internal.platform.events",
  "internal.platform.inference",
  "internal.platform.openrouter",
  "internal.platform.qdrant",
  "internal.platform.retrieval",
  "internal.shared"
]
